--- a/src/index.css
+++ b/src/index.css
@@ -50,6 +50,11 @@
 .cards {
   display: flex;
   overflow-x: auto;
+  padding: 2vw;
+}
+
+.cards::-webkit-scrollbar {
+  display: none;
 }
 
 .card {
@@ -64,8 +69,17 @@
   font-size: clamp(0.8rem, 3vw, 2rem);
 }
 
-.card-price > span {
+.card-title {
   font-weight: 600;
+}
+
+.rating-add-info {
+  color: #918e9b;
+}
+
+.card-price > span {
+  font-weight: 500;
+  color: #fe395c;
 }
 
 .star-icon {
